Fixed lack of content on mobile-homepage

--- a/style.css
+++ b/style.css
@@ -84,6 +84,17 @@ body{
         display: none;
     }
 }
+.h{
+    display: none;
+    width: 100vw;
+}
+
+@media screen and (max-width: 800px) {
+    .h {
+        display: block;
+        width: 100vw;
+    }
+}
 .t-links{
     padding-left: 5vw;
 }
@@ -163,5 +174,41 @@ body{
     text-align: center;
 }
 .quality:hover{
+    cursor: pointer;
+}
+.about-us{
+    background-image: url('online-shop.jpg');
+    background-size: cover;
+    background-position: center;
+    margin-bottom: -4%;
+    color: white;
+    border: 2px solid rgba(86, 83, 83, 0.2); /* subtle border blending with main background */
+    box-shadow: 0 2px 8px 0 rgba(86, 83, 83, 0.1); /* soft shadow for blending */
+}
+.tagline{
+    text-align: center;
+    text-decoration: underline;
+}
+.mission{
+    text-align: center;
+    padding: 0 10vw;
+    font-size: larger;
+}
+.about-btn{
+    display: block;
+    justify-items: center;
+    align-items: center;
+    background-color: white;
+    color: black;
+    border: none;
+    padding: 1vh 2vw;
+    font-size: medium;
+    font-weight: bold;
+    border-radius: 10px;
+    text-decoration: none;
+    margin: 2vh auto 5vh auto;
+}
+.about-btn:hover{
+    background-color: #4c525c;
     cursor: pointer;
 }
